refactor: update context provider notebook to enhance clarity and introduce SimpleMemoryProvider exercise. Removed outdated exercise content and improved user instructions for memory extraction.

--- a/03-rag/03.2-context-providers.ipynb
+++ b/03-rag/03.2-context-providers.ipynb
@@ -88,7 +88,7 @@
     "│                    Context Provider Pipeline                       │\n",
     "├────────────────────────────────────────────────────────────────────┤\n",
     "│                                                                    │\n",
-    "│  User Message ──► invoking() ──► Agent ──► invoked() ──► Response │\n",
+    "│  User Message ──► invoking() ──► Agent ──► invoked() ──► Response  │\n",
     "│                      │                         │                   │\n",
     "│                      ▼                         ▼                   │\n",
     "│              Inject Context             Extract/Store Info         │\n",
@@ -146,7 +146,7 @@
     "        return response.data[0].embedding\n",
     "\n",
     "\n",
-    "# Create chat client (AzureOpenAIChatClient doesn't require explicit cleanup)\n",
+    "# Create chat client\n",
     "chat_client = AzureOpenAIChatClient(\n",
     "    endpoint=openai_endpoint,\n",
     "    api_key=openai_api_key,\n",
@@ -287,70 +287,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "exercise1",
-   "metadata": {},
-   "source": [
-    "### Exercise 1: Build a Document Filter Provider\n",
-    "\n",
-    "The search provider returns results from all documents. What if you want Ask HR to ONLY answer from the employee handbook (ignoring health plan docs)?\n",
-    "\n",
-    "**Your task:** Create a `DocumentFilterContextProvider` that wraps a search provider and filters results by document title.\n",
-    "\n",
-    "```python\n",
-    "class DocumentFilterContextProvider(ContextProvider):\n",
-    "    def __init__(self, search_provider, allowed_titles: list[str]):\n",
-    "        # TODO: Store the search provider and allowed titles\n",
-    "        pass\n",
-    "    \n",
-    "    async def invoking(self, messages, **kwargs) -> Context:\n",
-    "        # TODO: Call the search provider, then filter results\n",
-    "        # to only include documents with titles in allowed_titles\n",
-    "        pass\n",
-    "```\n",
-    "\n",
-    "<details>\n",
-    "<summary>Click to see solution</summary>\n",
-    "\n",
-    "```python\n",
-    "class DocumentFilterContextProvider(ContextProvider):\n",
-    "    def __init__(self, search_provider, allowed_titles: list[str]):\n",
-    "        self.search_provider = search_provider\n",
-    "        self.allowed_titles = [t.lower() for t in allowed_titles]\n",
-    "    \n",
-    "    async def invoking(self, messages, **kwargs) -> Context:\n",
-    "        # Get context from the underlying provider\n",
-    "        context = await self.search_provider.invoking(messages, **kwargs)\n",
-    "        \n",
-    "        # Filter instructions to only include allowed sources\n",
-    "        # (This is a simplified example - real filtering depends on\n",
-    "        # how your provider formats the context)\n",
-    "        if context.instructions:\n",
-    "            lines = context.instructions.split('\\\\n')\n",
-    "            filtered = [l for l in lines \n",
-    "                       if any(t in l.lower() for t in self.allowed_titles)]\n",
-    "            context = Context(instructions='\\\\n'.join(filtered))\n",
-    "        \n",
-    "        return context\n",
-    "    \n",
-    "    async def __aenter__(self):\n",
-    "        await self.search_provider.__aenter__()\n",
-    "        return self\n",
-    "    \n",
-    "    async def __aexit__(self, *args):\n",
-    "        await self.search_provider.__aexit__(*args)\n",
-    "\n",
-    "# Usage:\n",
-    "handbook_only = DocumentFilterContextProvider(\n",
-    "    search_provider, \n",
-    "    allowed_titles=['employee_handbook.pdf']\n",
-    ")\n",
-    "```\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "check-index2",
@@ -364,8 +300,8 @@
     "if index2_name:\n",
     "    print(f\"✅ Second index configured: {index2_name}\")\n",
     "else:\n",
-    "    print(\"⚠️ INDEX2_NAME not found in .env - complete Exercise 1 first\")\n",
-    "    print(\"   You can still proceed with a single index, but the multi-source examples won't work.\")"
+    "    print(\"⚠️ INDEX2_NAME not found in .env\")\n",
+    "    print(\"   You can still proceed, but the multi-source examples won't work.\")"
    ]
   },
   {
@@ -691,87 +627,104 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exercise2",
+   "id": "exercise1-header",
    "metadata": {},
    "source": [
-    "### Exercise 2: Open Enrollment Awareness\n",
+    "### Exercise 1: Build a Memory Extraction Provider\n",
     "\n",
-    "The `TimeAwareContextProvider` just injects the date. But what if Ask HR should **proactively mention** when open enrollment is happening?\n",
+    "Context Providers have two hooks: `invoking()` runs **before** the LLM, and `invoked()` runs **after**. This makes them perfect for building memory systems.\n",
     "\n",
-    "**Your task:** Create an `EnrollmentAwareProvider` that:\n",
-    "1. Checks if the current date is within open enrollment period (Nov 1 - Nov 30)\n",
-    "2. If so, searches for enrollment-related documents and injects them as additional context\n",
-    "3. Adds an instruction reminding the agent to mention the enrollment deadline\n",
+    "**Your task:** Create a `SimpleMemoryProvider` that:\n",
+    "1. In `invoked()`, extracts any facts the user mentions (look for \"I prefer\" or \"I like\" statements)\n",
+    "2. In `invoking()`, injects those stored facts as context for future turns\n",
     "\n",
-    "```python\n",
-    "class EnrollmentAwareProvider(ContextProvider):\n",
-    "    def __init__(self, search_provider):\n",
-    "        self.search_provider = search_provider\n",
-    "        self.enrollment_start = (11, 1)  # November 1\n",
-    "        self.enrollment_end = (11, 30)   # November 30\n",
-    "    \n",
-    "    async def invoking(self, messages, **kwargs) -> Context:\n",
-    "        now = datetime.now()\n",
-    "        # TODO: Check if we're in enrollment period\n",
-    "        # TODO: If yes, search for enrollment docs and add reminder\n",
-    "        # TODO: If no, return empty context\n",
-    "        pass\n",
-    "```\n",
-    "\n",
-    "**Test it:** When your provider detects enrollment season, the agent should mention the deadline even for unrelated questions like \\\"What's my deductible?\\\"\n",
-    "\n",
-    "<details>\n",
-    "<summary>Click to see solution</summary>\n",
-    "\n",
-    "```python\n",
-    "class EnrollmentAwareProvider(ContextProvider):\n",
-    "    def __init__(self, search_provider):\n",
-    "        self.search_provider = search_provider\n",
-    "        self.enrollment_start = (11, 1)\n",
-    "        self.enrollment_end = (11, 30)\n",
-    "    \n",
-    "    def _is_enrollment_period(self) -> bool:\n",
-    "        now = datetime.now()\n",
-    "        return (self.enrollment_start <= (now.month, now.day) <= self.enrollment_end)\n",
-    "    \n",
-    "    async def invoking(self, messages, **kwargs) -> Context:\n",
-    "        if not self._is_enrollment_period():\n",
-    "            return Context()\n",
-    "        \n",
-    "        # During enrollment, always inject enrollment context\n",
-    "        # Force a search for enrollment info\n",
-    "        enrollment_query = ChatMessage.user(\\\"open enrollment deadline benefits changes\\\")\n",
-    "        enrollment_context = await self.search_provider.invoking([enrollment_query], **kwargs)\n",
-    "        \n",
-    "        reminder = \\\"\\\"\\\"\\nIMPORTANT: Open enrollment is currently active!\n",
-    "        Deadline: November 30th. Remind users to review their benefits choices.\\\"\\\"\\\"\n",
-    "        \n",
-    "        instructions = (enrollment_context.instructions or \\\"\\\") + reminder\n",
-    "        return Context(instructions=instructions)\n",
-    "    \n",
-    "    async def __aenter__(self):\n",
-    "        await self.search_provider.__aenter__()\n",
-    "        return self\n",
-    "    \n",
-    "    async def __aexit__(self, *args):\n",
-    "        await self.search_provider.__aexit__(*args)\n",
-    "```\n",
-    "\n",
-    "</details>"
+     "**Hints:**\n",
+     "- Store memories in a `self.memories: list[str]` attribute\n",
+     "- In `invoked()`, check if the user message contains preference keywords\n",
+     "- In `invoking()`, format memories as instructions if any exist\n",
+     "- Use `msg.text` to access the message content (not `.content`)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "exercise1-workspace",
+   "metadata": {},
+   "outputs": [],
+    "source": [
+     "# Exercise 1: Create a memory extraction provider\n",
+     "from collections.abc import Sequence\n",
+     "\n",
+     "\n",
+     "class SimpleMemoryProvider(ContextProvider):\n",
+     "    \"\"\"A context provider that extracts and remembers user facts.\"\"\"\n",
+     "    \n",
+     "    def __init__(self):\n",
+     "        self.memories: list[str] = []\n",
+     "    \n",
+     "    async def invoking(\n",
+     "        self,\n",
+     "        messages: ChatMessage | MutableSequence[ChatMessage],\n",
+     "        **kwargs: Any\n",
+     "    ) -> Context:\n",
+     "        # TODO: If no memories, return empty Context()\n",
+     "        # TODO: If memories exist, format them as instructions\n",
+     "        #       e.g., \"Remembered facts about the user:\\n- fact1\\n- fact2\"\n",
+     "        pass\n",
+     "    \n",
+     "    async def invoked(\n",
+     "        self,\n",
+     "        request_messages: ChatMessage | Sequence[ChatMessage],\n",
+     "        response_messages: ChatMessage | Sequence[ChatMessage] | None = None,\n",
+     "        **kwargs: Any,\n",
+     "    ) -> None:\n",
+     "        # TODO: Extract messages from request_messages\n",
+     "        #       (handle both single ChatMessage and Sequence)\n",
+     "        # TODO: Check if any message contains \"i prefer\" or \"i like\"\n",
+     "        #       Hint: use msg.text to get the message content\n",
+     "        # TODO: If so, add the message text to self.memories\n",
+     "        pass\n",
+     "\n",
+     "\n",
+     "# Test your provider with a multi-turn conversation\n",
+     "memory_provider = SimpleMemoryProvider()\n",
+     "\n",
+     "test_provider = AggregateContextProvider([\n",
+     "    memory_provider,\n",
+     "    knowledge_provider,\n",
+     "])\n",
+     "\n",
+     "async with (\n",
+     "    test_provider,\n",
+     "    ChatAgent(\n",
+     "        chat_client=chat_client,\n",
+     "        name=\"MemoryAgent\",\n",
+     "        instructions=\"You are a helpful HR assistant. Use any remembered facts to personalize responses.\",\n",
+     "        context_provider=test_provider,\n",
+     "    ) as agent,\n",
+     "):\n",
+     "    thread = agent.get_new_thread()\n",
+     "    \n",
+     "    # Turn 1: User states a preference\n",
+     "    print(\"User: I prefer plans with lower deductibles.\")\n",
+     "    response = await agent.run(\"I prefer plans with lower deductibles.\", thread=thread)\n",
+     "    print(f\"Agent: {response.text}\\n\")\n",
+     "    \n",
+     "    # Turn 2: Ask a question - agent should remember the preference\n",
+     "    print(\"User: Which plan should I choose?\")\n",
+     "    response = await agent.run(\"Which plan should I choose?\", thread=thread)\n",
+     "    print(f\"Agent: {response.text}\\n\")\n",
+     "    \n",
+     "    # Check what was remembered\n",
+     "    print(f\"Memories stored: {memory_provider.memories}\")"
+    ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "exercise3",
+   "id": "exercise1-wrapup",
    "metadata": {},
    "source": [
-    "### Exercise 3: Build a Memory Extraction Provider\n",
-    "\n",
-    "Create a custom context provider that:\n",
-    "1. In `invoked()`, extracts any facts the user mentions (like preferences)\n",
-    "2. In `invoking()`, injects those stored facts as context\n",
-    "\n",
-    "This creates a simple long-term memory for the agent.\n",
+    "Your memory provider should extract the preference from turn 1 and use it to personalize the recommendation in turn 2.\n",
     "\n",
     "<details>\n",
     "<summary>Click to see solution</summary>\n",
@@ -802,13 +755,13 @@
     "        response_messages: ChatMessage | Sequence[ChatMessage] | None = None,\n",
     "        **kwargs: Any,\n",
     "    ) -> None:\n",
-    "        # Simple extraction: look for \"I prefer\" or \"I like\" statements\n",
+    "        # Handle both single message and sequence\n",
     "        msgs = [request_messages] if isinstance(request_messages, ChatMessage) else list(request_messages)\n",
     "        \n",
     "        for msg in msgs:\n",
-    "            content = str(msg.content).lower()\n",
-    "            if \"i prefer\" in content or \"i like\" in content:\n",
-    "                self.memories.append(str(msg.content))\n",
+    "            text = (msg.text or \"\").lower()\n",
+    "            if \"i prefer\" in text or \"i like\" in text:\n",
+    "                self.memories.append(msg.text)\n",
     "```\n",
     "\n",
     "</details>"
