Added setup validation and changed to API keys

--- a/03-rag/03.1-rag-agent.ipynb
+++ b/03-rag/03.1-rag-agent.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "340f16e9",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "161693b5",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d0fc3709",
    "metadata": {},
    "outputs": [],
@@ -226,38 +226,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4aaa1796",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out-of-network copays are the fixed amounts you will need to pay for medical services received from providers not contracted with your health insurance plan. Based on the information retrieved, here are the key specifics regarding out-of-network copays under the Northwind Health Plus Plan:\n",
-      "\n",
-      "1. **Higher Costs**: Copayments for out-of-network services are generally higher than for in-network services. For instance:\n",
-      "   - **Primary Care Visits**: Approximately $50\n",
-      "   - **Specialist Visits**: Approximately $75\n",
-      "   - **Emergency Services**: Approximately $150\n",
-      "\n",
-      "2. **Coverage Limitations**: Northwind Health Plus will only cover a portion of the costs for out-of-network services, meaning you may be responsible for paying the remaining balance after the plan has contributed its part.\n",
-      "\n",
-      "3. **Exceptions**: In certain cases, like mental health and substance abuse services, the copayment differs. For instance, out-of-network mental health services may have a copay of around $60.\n",
-      "\n",
-      "4. **No Waiver on Copayments**: Unlike in-network preventive services that often have no copayment, out-of-network services always require a copayment.\n",
-      "\n",
-      "5. **Importance of In-Network Providers**: For cost-effectiveness, it is generally advised to use in-network providers whenever possible, as they typically come with lower copayments and costs overall.\n",
-      "\n",
-      "Understanding these aspects of out-of-network copays can help in managing your healthcare expenses effectively. If you have any more specific inquiries about the health plans, feel free to ask!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize the search tool for the agent providing the search client\n",
     "tools = AzureAISearchTool(search_client=search_client)\n",
     "\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    name=\"employee_agent\",\n",
     "    instructions=\"\"\"\n",
     "    You are an HR Assistant for Contoso Electronics specializing in employee health plans. Your role is to answer in-depth and technical questions about the two available health plans:\n",
@@ -403,107 +380,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "264535ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User: What's ERISA?\n",
-      "Agent: "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n",
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Employee Retirement Income Security Act (ERISA) is a federal law that sets minimum standards for pension and health plans in private industry. It ensures that employees receive certain protections, including the right to receive detailed information about their plans, protection from discrimination, and the right to appeal decisions made by their plans. ERISA aims to safeguard the interests of employee benefit plan participants and their beneficiaries.\n",
-      "\n",
-      "User: What does Northwind Standard not cover?\n",
-      "Agent: "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n",
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Northwind Standard does not cover emergency services, mental health and substance abuse services, or out-of-network services.\n",
-      "\n",
-      "User: Can independent contractor services be covered?\n",
-      "Agent: "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n",
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Under the Northwind Health Plus plan, services provided by independent contractors can be covered if they are medically necessary to treat an illness or injury. However, the Northwind Standard plan does not cover any services from independent contractors; employees must pay for those services out-of-pocket. Be sure to confirm the necessity and coverage with your provider before receiving services.\n",
-      "\n",
-      "User: What does vice president of sales do?\n",
-      "Agent: "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n",
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Vice President of Sales at Contoso Electronics is responsible for driving sales and revenue growth. Key duties include developing and executing sales strategies, managing and motivating the sales team, establishing relationships with key customers, and monitoring sales team performance to achieve sales targets and customer satisfaction goals.\n",
-      "\n",
-      "User: What are out-of-network copays?\n",
-      "Agent: "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n",
-      "k_nearest_neighbors is not a known attribute of class <class 'azure.search.documents._generated.models._models_py3.VectorizableTextQuery'> and will be ignored\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For out-of-network services under the Northwind Health Plus plan, copayments are typically higher than for in-network services. The copayment for primary care visits is around $50, while specialist visits have a copayment of approximately $75. Out-of-network emergency services have a copayment of about $150, and it's important to note that Northwind Health Plus will only cover a portion of out-of-network services, potentially leaving you responsible for the remaining balance.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from agent_framework import ChatAgent\n",
@@ -616,7 +496,7 @@
   "kernelspec": {
    "display_name": "agent-framework-workshop",
    "language": "python",
-   "name": "python3"
+   "name": "agent-framework-workshop"
   },
   "language_info": {
    "codemirror_mode": {
