--- a/04-human-in-the-loop/04.1-hitl-intro.ipynb
+++ b/04-human-in-the-loop/04.1-hitl-intro.ipynb
@@ -63,30 +63,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "3aec56b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Setup validated! All required environment variables are set.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, '..')\n",
+    "\n",
+    "from workshop_utils import validate_env\n",
+    "\n",
+    "validate_env()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "3d01c38a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Client created successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "from dotenv import load_dotenv\n",
     "from agent_framework.azure import AzureOpenAIChatClient\n",
-    "from azure.identity import AzureCliCredential\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "project_endpoint = os.getenv(\"AZURE_AI_PROJECT_ENDPOINT\")\n",
-    "deployment_name = os.getenv(\"AZURE_AI_MODEL_DEPLOYMENT_NAME\")\n",
-    "api_version = os.getenv(\"AZURE_AI_API_VERSION\")\n",
-    "credential = AzureCliCredential()\n",
-    "\n",
     "\n",
     "chat_client = AzureOpenAIChatClient(\n",
-    "    endpoint=project_endpoint,\n",
-    "    ad_token=credential.get_token(\"https://cognitiveservices.azure.com/.default\").token,\n",
-    "    deployment_name=deployment_name,\n",
-    "    api_version=api_version\n",
-    ")\n"
+    "    endpoint=os.getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
+    "    api_key=os.getenv(\"AZURE_OPENAI_API_KEY\"),\n",
+    "    api_version=os.getenv(\"AZURE_OPENAI_API_VERSION\"),\n",
+    "    deployment_name=os.getenv(\"AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\"),\n",
+    ")\n",
+    "\n",
+    "print(\"Client created successfully!\")"
    ]
   },
   {
@@ -107,14 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e45f8188",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Annotated\n",
     "from agent_framework import ai_function, ChatMessage, Role, ChatAgent \n",
-    "\n",
     "\n",
     "@ai_function\n",
     "def send_email_notification(recipient: Annotated[str, \"Email address\"]) -> str:\n",
@@ -138,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "52dd1677",
    "metadata": {},
    "outputs": [],
@@ -185,10 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "66ab6a1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'final_result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m     11\u001b[39m     approval_message = ChatMessage(\n\u001b[32m     12\u001b[39m         role=Role.USER, \n\u001b[32m     13\u001b[39m         contents=[user_input_needed.create_response(user_approval)]\n\u001b[32m     14\u001b[39m     )\n\u001b[32m     16\u001b[39m     final_result = \u001b[38;5;28;01mawait\u001b[39;00m agent.run([\n\u001b[32m     17\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mSend an email to team@company.com, sales@company.com, and support@company.com\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     18\u001b[39m         ChatMessage(role=Role.ASSISTANT, contents=[user_input_needed]),\n\u001b[32m     19\u001b[39m         approval_message\n\u001b[32m     20\u001b[39m     ])\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfinal_result\u001b[49m.text)\n",
+      "\u001b[31mNameError\u001b[39m: name 'final_result' is not defined"
+     ]
+    }
+   ],
    "source": [
     "if result.user_input_requests:\n",
     "    print(\"Approval required:\")\n",
@@ -245,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "318380ca",
    "metadata": {},
    "outputs": [],
@@ -303,10 +347,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "649caa38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Management Agent - Handling Approvals in a Loop\n",
+      "Type 'quit' or 'q' to exit.\n",
+      "\n",
+      "AGENT RUN DETAILS:\n",
+      "   Response ID: chatcmpl-D3Jlqs22zWc0RvybOC2ev8yMmzqqB\n",
+      "   User Query: 'get my data'\n",
+      "   Messages in response: 1\n",
+      "\n",
+      "   Message 1 - Role: assistant\n",
+      "Your current user information is as follows:\n",
+      "\n",
+      "- **Name:** John Doe\n",
+      "- **Role:** Engineering Manager\n",
+      "- **User ID:** 1042\n",
+      "\n",
+      " Finished the session\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from agent_framework import ChatAgent, ChatMessage, Role\n",
@@ -342,7 +409,7 @@
     "        continue\n",
     "\n",
     "    # First agent run: process user query\n",
-    "    run1 = await agent.run(user_input, thread=thread)\n",
+    "    run = await agent.run(user_input, thread=thread)\n",
     "\n",
     "    # Inspect the agent's response\n",
     "    print(\"AGENT RUN DETAILS:\")\n",
@@ -364,12 +431,12 @@
     "\n",
     "\n",
     "    # Check if the agent needs approval for any function calls\n",
-    "    if run1.user_input_requests:\n",
+    "    if run.user_input_requests:\n",
     "        print(\"\\n\\nAPPROVALS REQUIRED:\")\n",
     "        approval_messages: list[ChatMessage] = []\n",
     "\n",
     "        # Iterate through each approval request and collect user decisions\n",
-    "        for request in run1.user_input_requests:\n",
+    "        for request in run.user_input_requests:\n",
     "            print(f\"- Approval needed for: {request.function_call.name}\")\n",
     "            print(f\"  Arguments: {request.function_call.arguments}\")\n",
     "            print(f\"  Function call ID: {request.function_call.call_id}\")\n",
@@ -389,7 +456,7 @@
     "\n",
     "    else:\n",
     "        # No approvals needed - display the response directly\n",
-    "        print(run1.text)\n",
+    "        print(run.text)\n",
     "    \n",
     "    print()"
    ]
@@ -436,10 +503,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a652673b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== FULL THREAD HISTORY ===\n",
+      "\n",
+      "[Message 1] Role: user\n",
+      "   Text Content:\n",
+      "       get user data\n",
+      "\n",
+      "[Message 2] Role: assistant\n",
+      "   Function Call Content:\n",
+      "      Name: get_user\n",
+      "      Arguments: {}\n",
+      "      Call ID: call_mfTtOAbfQI1WkyfGZ3jkMInO\n",
+      "\n",
+      "[Message 3] Role: tool\n",
+      "   Function Result Content:\n",
+      "       {'name': 'John Doe', 'role': 'Engineering Manager', 'user_id': 1042}\n",
+      "      Call ID: call_mfTtOAbfQI1WkyfGZ3jkMInO\n",
+      "\n",
+      "[Message 4] Role: assistant\n",
+      "   Text Content:\n",
+      "       The current user's information is as follows:\n",
+      "\n",
+      "- **Name:** John Doe\n",
+      "- **Role:** Engineering Manager\n",
+      "- **User ID:** 1042\n",
+      "\n",
+      "[Message 5] Role: user\n",
+      "   Text Content:\n",
+      "       add kk do 43 manager\n",
+      "\n",
+      "[Message 6] Role: assistant\n",
+      "   Function Call Content:\n",
+      "      Name: submit_user_data\n",
+      "      Arguments: {\"name\":\"KK\",\"role\":\"Manager\",\"user_id\":43}\n",
+      "      Call ID: call_2e8oyQZDH4JbF3kubuytNBHv\n",
+      "\n",
+      "[Message 7] Role: tool\n",
+      "   Function Result Content:\n",
+      "       User data for 'KK' (ID: 43, role: Manager) has been submitted to the system.\n",
+      "      Call ID: call_2e8oyQZDH4JbF3kubuytNBHv\n",
+      "\n",
+      "[Message 8] Role: assistant\n",
+      "   Text Content:\n",
+      "       The user data for \"KK\" under the role \"Manager\" with user ID 43 has been successfully submitted to the system.\n"
+     ]
+    }
+   ],
    "source": [
     "from agent_framework import (\n",
     "    TextContent,\n",
@@ -491,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c5210d85",
    "metadata": {},
    "outputs": [],
