--- a/04-human-in-the-loop/04.2-hitl-workflows.ipynb
+++ b/04-human-in-the-loop/04.2-hitl-workflows.ipynb
@@ -106,30 +106,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "38476eb8",
+   "execution_count": 1,
+   "id": "65e0a641",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Setup validated! All required environment variables are set.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, '..')\n",
+    "\n",
+    "from workshop_utils import validate_env\n",
+    "\n",
+    "validate_env()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9a3f43b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Client created successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "from dotenv import load_dotenv\n",
     "from agent_framework.azure import AzureOpenAIChatClient\n",
-    "from azure.identity import AzureCliCredential\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "project_endpoint = os.getenv(\"AZURE_AI_PROJECT_ENDPOINT\")\n",
-    "deployment_name = os.getenv(\"AZURE_AI_MODEL_DEPLOYMENT_NAME\")\n",
-    "api_version = os.getenv(\"AZURE_AI_API_VERSION\")\n",
-    "credential = AzureCliCredential()\n",
-    "\n",
     "\n",
     "chat_client = AzureOpenAIChatClient(\n",
-    "    endpoint=project_endpoint,\n",
-    "    ad_token=credential.get_token(\"https://cognitiveservices.azure.com/.default\").token,\n",
-    "    deployment_name=deployment_name,\n",
-    "    api_version=api_version\n",
-    ")"
+    "    endpoint=os.getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
+    "    api_key=os.getenv(\"AZURE_OPENAI_API_KEY\"),\n",
+    "    api_version=os.getenv(\"AZURE_OPENAI_API_VERSION\"),\n",
+    "    deployment_name=os.getenv(\"AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\"),\n",
+    ")\n",
+    "\n",
+    "print(\"Client created successfully!\")"
    ]
   },
   {
@@ -139,9 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections.abc import Mapping\n",
     "from dataclasses import dataclass\n",
-    "from typing import Any, Optional\n",
+    "from typing import Optional\n",
     "from enum import Enum\n",
     "from uuid import uuid4\n",
     "\n",
@@ -185,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ba7c9aa4",
    "metadata": {},
    "outputs": [],
@@ -249,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ed0cf37d",
    "metadata": {},
    "outputs": [],
@@ -344,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9a0e9c2d",
    "metadata": {},
    "outputs": [],
@@ -408,10 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "68eb8af0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building workflow with Worker-Reviewer cycle...\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Building workflow with Worker-Reviewer cycle...\")\n",
     "\n",
@@ -456,10 +496,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5a976da7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running workflow agent with user query...\n",
+      "Query: Write a Python function to calculate factorial\n",
+      "--------------------------------------------------\n",
+      "Worker: Received user messages, generating response...\n",
+      "Worker: Calling LLM to generate response...\n",
+      "Worker: Response generated: Certainly! Here is a Python function that calculates the factorial of a given non-negative integer using recursion:\n",
+      "\n",
+      "```python\n",
+      "def factorial(n):\n",
+      "    if n < 0:\n",
+      "        raise ValueError(\"Factorial is not defined for negative numbers.\")\n",
+      "    elif n == 0 or n == 1:\n",
+      "        return 1\n",
+      "    else:\n",
+      "        return n * factorial(n - 1)\n",
+      "\n",
+      "# Example usage\n",
+      "print(factorial(5))  # Output: 120\n",
+      "```\n",
+      "\n",
+      "This function checks for a negative input and raises an error, as factorials are only defined for non-negative integers. For non-negative integers, it recursively calculates the product of `n` and the factorial of `n-1`.\n",
+      "Worker: Sending response for review (ID: 73aa0b76)\n",
+      "Reviewer: Evaluating response for request 73aa0b76...\n",
+      "Reviewer: Escalating to human manager...\n",
+      "\n",
+      " Workflow paused - Human review required\n",
+      "Reviewer: Accepting human review for request 73aa0b76...\n",
+      "Reviewer: Human feedback: Approved\n",
+      "Reviewer: Human approved: True\n",
+      "Reviewer: Forwarding human review back to worker...\n",
+      "Worker: Received review for request 73aa0b76 - Approved: True\n",
+      "Worker: Response approved. Emitting to external consumer...\n",
+      "Final Agent Response: Certainly! Here is a Python function that calculates the factorial of a given non-negative integer using recursion:\n",
+      "\n",
+      "```python\n",
+      "def factorial(n):\n",
+      "    if n < 0:\n",
+      "        raise ValueError(\"Factorial is not defined for negative numbers.\")\n",
+      "    elif n == 0 or n == 1:\n",
+      "        return 1\n",
+      "    else:\n",
+      "        return n * factorial(n - 1)\n",
+      "\n",
+      "# Example usage\n",
+      "print(factorial(5))  # Output: 120\n",
+      "```\n",
+      "\n",
+      "This function checks for a negative input and raises an error, as factorials are only defined for non-negative integers. For non-negative integers, it recursively calculates the product of `n` and the factorial of `n-1`.\n",
+      "==================================================\n",
+      "Workflow completed!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Running workflow agent with user query...\")\n",
     "print(\"Query: Write a Python function to calculate factorial\")\n",
