--- a/01-single-agents/01.2-single-agent-mcp.ipynb
+++ b/01-single-agents/01.2-single-agent-mcp.ipynb
@@ -56,43 +56,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "setup-validation",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Setup validated! All required environment variables are set.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
+    "import sys\n",
+    "sys.path.insert(0, '..')  # Add parent directory to path\n",
     "\n",
-    "# Load environment variables from .env file\n",
-    "load_dotenv()\n",
+    "from workshop_utils import validate_env\n",
     "\n",
-    "# Required environment variables\n",
-    "required_vars = [\n",
-    "    \"AZURE_OPENAI_ENDPOINT\",\n",
-    "    \"AZURE_OPENAI_API_KEY\",\n",
-    "    \"AZURE_OPENAI_API_VERSION\",\n",
-    "    \"AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\"\n",
-    "]\n",
-    "\n",
-    "# Validate setup\n",
-    "missing = [var for var in required_vars if not os.getenv(var)]\n",
-    "\n",
-    "if missing:\n",
-    "    print(\"Missing required environment variables:\")\n",
-    "    for var in missing:\n",
-    "        print(f\"  - {var}\")\n",
-    "    print(\"\\nPlease create a .env file with these variables.\")\n",
-    "else:\n",
-    "    print(\"Setup validated! All required environment variables are set.\")"
+    "validate_env()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d3c65b71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Client created successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from agent_framework.azure import AzureOpenAIChatClient\n",
@@ -132,7 +140,7 @@
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
     "# Create an agent for documentation queries\n",
-    "docs_agent = client.create_agent(\n",
+     "docs_agent = client.as_agent(\n",
     "    name=\"DocsAgent\",\n",
     "    instructions=\"You are a helpful assistant that answers questions using Microsoft documentation.\"\n",
     ")\n",
@@ -239,9 +247,9 @@
    "source": [
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
-    "# TODO: Create a customer service agent using client.create_agent()\n",
+     "# TODO: Create a customer service agent using client.as_agent()\n",
     "# Give it a name and instructions for helping customers\n",
-    "agent = client.create_agent(\n",
+     "agent = client.as_agent(\n",
     "    name=\"...\",\n",
     "    instructions=\"...\"\n",
     ")\n",
@@ -274,7 +282,7 @@
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
     "# Create a customer service agent\n",
-    "agent = client.create_agent(\n",
+     "agent = client.as_agent(\n",
     "    name=\"CustomerServiceAgent\",\n",
     "    instructions=\"You are a helpful customer service agent. Use the available tools to look up customer information and assist with their needs.\"\n",
     ")\n",
@@ -327,7 +335,7 @@
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
     "# Create the agent\n",
-    "agent = client.create_agent(\n",
+     "agent = client.as_agent(\n",
     "    name=\"CustomerServiceAgent\",\n",
     "    instructions=\"\"\"You are a customer service agent for Contoso. \n",
     "    Use the available tools to help customers with their accounts.\n",
@@ -377,7 +385,7 @@
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
     "# Create the agent\n",
-    "agent = client.create_agent(\n",
+     "agent = client.as_agent(\n",
     "    name=\"CustomerServiceAgent\",\n",
     "    instructions=\"\"\"You are a customer service agent for Contoso. \n",
     "    Use the available tools to help customers with their accounts.\n",
