improve RAG documentation and setup guides

--- a/03-rag/03.1-rag-fundamentals.ipynb
+++ b/03-rag/03.1-rag-fundamentals.ipynb
@@ -972,6 +972,18 @@
     "\n",
     "**The key insight:** Manual RAG works, but it's tedious. You're responsible for search logic, prompt construction, multi-turn state, and token management - for every agent.\n",
     "\n",
+    "### Production Considerations: Blob Storage Integration\n",
+    "\n",
+    "In this notebook, we indexed documents programmatically from local files. This approach is great for learning and development, but in production scenarios you'll want a more streamlined pipeline.\n",
+    "\n",
+    "**The recommended production approach** is to connect Azure Blob Storage directly to Azure AI Search using indexers. This enables:\n",
+    "- **Automatic indexing** - Documents uploaded to Blob Storage are automatically indexed\n",
+    "- **Incremental updates** - Only new or changed documents are re-indexed\n",
+    "- **Managed identity authentication** - Secure, keyless connections between services\n",
+    "- **Built-in skillsets** - Azure AI Search can automatically chunk, embed, and enrich documents\n",
+    "\n",
+    "For a complete guide on setting up this production-ready architecture with Blob Storage, managed identities, and automated indexing pipelines, see **[guides/blob-storage-ai-search-integration.md](../guides/blob-storage-ai-search-integration.md)**.\n",
+    "\n",
     "### Next: Context Providers\n",
     "\n",
     "In **03.2**, you'll see how Context Providers eliminate this boilerplate. They automatically inject relevant context before every LLM call, handle multi-turn conversations, and make combining multiple knowledge sources trivial. Ask HR is about to get a lot easier to build."
@@ -980,7 +992,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
