--- a/03-rag/03.0-setup-guide.md
+++ b/03-rag/03.0-setup-guide.md
@@ -1,14 +1,11 @@
 ## Azure AI Search: Setup Guide
 
-This guide walks you through setting up the Azure resources needed for RAG (Retrieval-Augmented Generation) with the Agent Framework.
+This guide walks you through setting up the Azure AI Search service needed for the RAG labs. The indexing, chunking, and embedding generation are done programmatically in `03.1-rag-fundamentals.ipynb`.
 
 ### What You'll Set Up
 
 1. **Azure AI Search service** - For indexing and searching your documents
-2. **Storage account** - For storing source documents  
-3. **Permissions** - For secure access between services
-
-> **Note**: Index creation is now done programmatically in `03.1-rag-fundamentals.ipynb`. This guide focuses only on Azure resource setup.
+2. **Embedding model deployment** - For generating vector embeddings
 
 ---
 
@@ -18,11 +15,9 @@ This guide walks you through setting up the Azure resources needed for RAG (Retr
 
 **Core capabilities:**
 - Full-text search, filtering, faceting, and autocomplete
-- **Semantic search** - Understanding meaning and context
+- **Vector search** - Understanding meaning and context
 - **Vector search** - Similarity matching using embeddings  
-- **Hybrid search** - Combining keyword and vector approaches
-
-**Data sources:** Azure Blob Storage, Azure SQL Database, Cosmos DB, or direct REST API uploads. Supports PDFs, Office documents, HTML, JSON, and plain text.
+- **Semantic search** - Combining keyword and vector approaches
 
 ---
 
@@ -32,8 +27,6 @@ Before proceeding with this guide, ensure you have:
 
 - **Completed the Microsoft Foundry project creation** by following the steps in the README
 - **Identified your resource group in Azure Portal**: You can find the resource group name under **"Project details"** on your project's **"Overview"** page in Foundry.
-
-**Note**: At this point, your resource group in Azure Portal contains only Foundry resources. In the following steps, we will create an Azure AI Search Service within the same resource group.
 
 ---
 
@@ -46,104 +39,23 @@ Before proceeding with this guide, ensure you have:
 	
     ![img1](images/image.png)
 
-2. Navigate to your search service once it is created. Under Settings -> Keys, ensure 'Both' is selected for API access control. Click 'Save'.
-
-    ![img2](images/image1.png)
-
-3. Navigate to Settings -> Identity -> Turn on system-assigned identity -> click 'Save'.
-
-    ![img3](images/image2.png)
-
-4. In Foundry Portal, deploy an embedding model the same way we initially set up the gpt-4o chat model deployment:
+2. In Foundry Portal, deploy an embedding model the same way we initially set up the gpt-4o chat model deployment:
    - Select `text-embedding-3-large` and deploy it. This will be used later to create the vector embeddings for our documents.
 
 ---
 
-#### Step 2: Create a Storage Account
-
-We need to create a storage account and a storage container within it which will store our health plan documents. This is where our Azure AI Search service will retrieve our health plan documents from:
-
-1. Create -> Search for "Storage Account" -> Click "Create"
-
-    ![Sample Photo](images/storageacc.png)
-
-2. Once created, navigate to the Storage Account
-3. Expand "Data Storage" in the side menu and click on "Containers"
-4. Create a new container named: `[your-initials]healthdocs` (Example: 'akhealthdocs')
-
----
-
-#### Step 3: Required permissions for the lab
-
-##### Managed-identity permissions:
-
-The next steps are needed for the AI search resource to be able to vectorize the input documents:
-
-1. Navigate to the created storage account's **Access Control (IAM)** section. Select 'Add'->'Add role assignment'. **Assign the 'Storage Blob Data Reader role' to the search service identity**, as shown here:
-
-    ![Sample Photo](images/blob-roleassign.jpg)
-
-2. Navigate to your **Azure AI Search resource** that was created above. Assign two roles to your project's managed identity: the **'Search Index Data Reader'** role and the **'Search Service Contributor'** role:
-
-    ![searchindex_reader](images/searchindex_reader.jpg)
-
-    ![search_contributor](images/search_contributor.jpg)
-
-3. Navigate to your **Foundry** resource. Select Access control (IAM) -> Add Role assignment -> Select **Azure AI Project Manager** role -> Next -> Under **Members**, select **Managed identity**, and then select your subscription and the managed identity of your search service:
-
-    ![pm_role](images/pm_role.png)
-
-
-##### User permissions:
-
-**If you have contributor or higher permissions on a resource group, you inherit these user permissions and DO NOT need to add the below role assignments**, you can proceed to the next step. Otherwise, if you are a user, check to ensure the below role assignments are added for you.
-
-TIP: if you are working on project teams and need to assign permissions to multiple users, you can add these permissions faster by creating a Entra ID security group (so you do not have to add users one-by-one) and by running Azure CLI scripts in Azure Cloud Shell.
-
-1. At a minimum, users running these labs should have a **Reader role assigned on the Azure Subscription level**. In the Azure Portal, navigate to the Azure Subscription in which your resource group lives. On the left pane, select Access control > Role assignments. Filter 'Scope' to 'This resource'. Review user account permissions. If this is not assigned, add this role assignment to the user.
-
-2. **Each user needs to be granted the 'Cognitive Services OpenAI Contributor' role on the Azure AI Foundry resource**. To do this, in the Azure Portal, navigate to the Azure AI Foundry resource, select Access control > Add+ Role assignment > select Cognitive Services OpenAI Contributor role > next select the user(s) > create role assignment.
-
-3. **Each user needs to be granted the 'Azure AI Project Manager' role on the Azure AI Foundry resource**. To do this, in the Azure Portal, navigate to the Azure AI Foundry resource, select Access control > Add+ Role assignment > select Azure AI Project Manager role > next select the user(s) > create role assignment. 
-
-4. **Each user needs to be granted the 'Azure AI Project Manager' role in their respective Azure AI Foundry project**. To do this, in the Azure Portal, navigate to the appropriate Foundry project, select Access control > Add+ Role assignment > select Azure AI Project Manager role > next select the user(s) > create role assignment. Repeat this process, as necessary, for all of the Foundry projects within your Foundry Resource.
-
-5. **Each user needs to be granted the 'Storage Blob Data Contributor' role on the Storage Account**. To do this, add another role assignment > select Storage Blob Data Contributor role > next select the user(s) > create role assignment.
-
-6. **Each user needs to be granted the 'Search Service Contributor' role on the Azure AI Search resource**. To do this, add another role assignment > select Search Service Contributor role > next select the user(s) > create role assignment.
-
----
-
-#### Step 4: Configure Environment Variables
+#### Step 2: Configure Environment Variables
 
 Add the following to your `.env` file:
 
 ```
 AZURE_SEARCH_ENDPOINT=https://<search-service-name>.search.windows.net
-AZURE_SEARCH_INDEX_NAME=healthplan-index
+INDEX_NAME=healthplan-index
 SEARCH_API_KEY=<your-search-api-key>
-AZURE_AI_EMBEDDING_DEPLOYMENT_NAME=text-embedding-3-large
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME=text-embedding-3-large
 ```
 
 You can find the search API key in the Azure Portal under your Search Service -> Settings -> Keys.
-
----
-
-### Architecture Overview
-
-In this setup, we deployed two models in Azure AI Foundry:
-
-- **GPT-4o** - Chat/completion model for powering your AI agents
-- **Text embedding model** - Converts documents into vector representations for semantic search
-
-In Azure, we created the necessary infrastructure within your resource group:
-
-- **Foundry resource** - The underlying AI services hub that hosts all model deployments and provides API endpoints
-- **Foundry project resource** - The project-level workspace for managing agents, configurations, and orchestrating AI workflows
-- **Azure AI Search service** - Provides indexing, vector storage, and fast semantic search capabilities
-- **Storage account** - Stores your source documents and data to be indexed
-
-This architecture enables you to create AI agents that can perform Retrieval-Augmented Generation (RAG) by searching through your indexed knowledge base.
 
 ---
 
